# jass-kit-cpp

./: .gitignore  CMakeLists.txt  README.md  setup.py
py_test/: jass_kit_cpp_test.py
source/: CMakeLists.txt
source/include/jass/agents/: JassAgent.hpp  JassAgentCheating.hpp  JassAgentRandom.hpp
source/include/jass/game/: GameObservation.hpp  GameRule.hpp  GameSim.hpp  GameState.hpp  GameStateUtils.hpp  GameUtils.hpp  RuleSchieber.hpp  const.hpp  types.hpp
source/include/jass/interface/: IJassKit.hpp
source/src/jass/agents/: JassAgentRandom.cpp
source/src/jass/game/: GameObservation.cpp  GameSim.cpp  GameState.cpp  GameStateUtils.cpp  RuleSchieber.cpp
source/src/jass/interface/: GameSimModule.cpp
test/: CMakeLists.txt  GameObservationTest.cpp  GameSimTest.cpp  JassAgentTest.cpp  const_test.cpp  rule_schieber_points_test.cpp  rule_schieber_test.cpp  rule_schieber_winner_test.cpp
